# Finedr

./: backend_test.py  backend_test_results.json  convert_logo.py  design_guidelines.json  generate_logo.py
.emergent/: emergent.yml
backend/: .env  server.py
frontend/: .env
frontend/src/: App.css  App.js  index.css
memory/: PRD.md
tauri-file-manager/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tauri-file-manager/src/: App.jsx  SplashScreen.jsx  index.css  main.jsx  useTrayAnimation.js
tauri-file-manager/src-tauri/: Cargo.toml  tauri.conf.json
tauri-file-manager/src-tauri/capabilities/: default.json
tauri-file-manager/src-tauri/src/: main.rs
test_reports/: iteration_1.json
