[package]
name = "smart-file-manager"
version = "1.0.0"
description = "Gestionnaire de fichiers intelligent inspiré de macOS Finder"
authors = ["Smart File Manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
trash = "5"
dirs = "5"
walkdir = "2"
mime_guess = "2"
image = "0.25"
open = "5.3.3"
sysinfo = "0.33"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
